tests/baselines/reference/unconstrainedTypeComparison.errors.txt
unconstrainedTypeComparison.ts(2,12): error TS18049: 'a' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(2,16): error TS18049: 'b' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(6,12): error TS18049: 'a' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(6,16): error TS18049: 'b' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(10,12): error TS18046: 'a' is of type 'unknown'.
unconstrainedTypeComparison.ts(10,16): error TS18046: 'b' is of type 'unknown'.
unconstrainedTypeComparison.ts(14,12): error TS18049: 'a' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(14,16): error TS18049: 'b' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(18,12): error TS18049: 'a' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(18,16): error TS18049: 'b' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(22,12): error TS18046: 'a' is of type 'unknown'.
unconstrainedTypeComparison.ts(22,16): error TS18046: 'b' is of type 'unknown'.
unconstrainedTypeComparison.ts(26,12): error TS18048: 'a' is possibly 'undefined'.
unconstrainedTypeComparison.ts(26,16): error TS18048: 'b' is possibly 'undefined'.
unconstrainedTypeComparison.ts(30,12): error TS18047: 'a' is possibly 'null'.
unconstrainedTypeComparison.ts(30,16): error TS18047: 'b' is possibly 'null'.
unconstrainedTypeComparison.ts(34,12): error TS18049: 'a' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(34,16): error TS18049: 'b' is possibly 'null' or 'undefined'.
unconstrainedTypeComparison.ts(45,12): error TS18047: 'a' is possibly 'null'.
unconstrainedTypeComparison.ts(45,16): error TS18048: 'b' is possibly 'undefined'.


==== unconstrainedTypeComparison.ts (20 errors) ====
    function f1<T>(a: T, b: T): boolean {
        return a > b;
               ~
!!! error TS18049: 'a' is possibly 'null' or 'undefined'.
                   ~
!!! error TS18049: 'b' is possibly 'null' or 'undefined'.
    }
    
    function f2<T extends {} | undefined | null>(a: T, b: T): boolean {
        return a > b;
               ~
!!! error TS18049: 'a' is possibly 'null' or 'undefined'.
                   ~
!!! error TS18049: 'b' is possibly 'null' or 'undefined'.
    }
    
    function f3<T extends unknown>(a: T, b: T): boolean {
        return a > b;
               ~
!!! error TS18046: 'a' is of type 'unknown'.
                   ~
!!! error TS18046: 'b' is of type 'unknown'.
    }
    
    function f4<T, U extends T>(a: U, b: U): boolean {
        return a > b;
               ~
!!! error TS18049: 'a' is possibly 'null' or 'undefined'.
                   ~
!!! error TS18049: 'b' is possibly 'null' or 'undefined'.
    }
    
    function f5<T extends {} | undefined | null, U extends T>(a: U, b: U): boolean {
        return a > b;
               ~
!!! error TS18049: 'a' is possibly 'null' or 'undefined'.
                   ~
!!! error TS18049: 'b' is possibly 'null' or 'undefined'.
    }
    
    function f6<T extends unknown, U extends T>(a: U, b: U): boolean {
        return a > b;
               ~
!!! error TS18046: 'a' is of type 'unknown'.
                   ~
!!! error TS18046: 'b' is of type 'unknown'.
    }
    
    function f7<T extends {} | undefined, U extends T>(a: U, b: U): boolean {
        return a > b;
               ~
!!! error TS18048: 'a' is possibly 'undefined'.
                   ~
!!! error TS18048: 'b' is possibly 'undefined'.
    }
    
    function f8<T extends {} | null, U extends T>(a: U, b: U): boolean {
        return a > b;
               ~
!!! error TS18047: 'a' is possibly 'null'.
                   ~
!!! error TS18047: 'b' is possibly 'null'.
    }
    
    function f9<T extends undefined | null, U extends T>(a: U, b: U): boolean {
        return a > b;
               ~
!!! error TS18049: 'a' is possibly 'null' or 'undefined'.
                   ~
!!! error TS18049: 'b' is possibly 'null' or 'undefined'.
    }
    
    
    function compare<T>(a: T, b: T): boolean {
        if (a === undefined) {
            return false;
        }
        if (b === null) {
            return false;
        }
        return a > b;
               ~
!!! error TS18047: 'a' is possibly 'null'.
                   ~
!!! error TS18048: 'b' is possibly 'undefined'.
    }